syntax = "proto3";

import "github.com/cloudevents/sdk-go/binding/format/protobuf/v2/pb/cloudevent.proto";

package pb;

option go_package = "./pb";

// ChipIngress service provides a way for senders to produce CloudEvents messages to Kafka
service ChipIngress {
    rpc Publish (io.cloudevents.v1.CloudEvent) returns (PublishResponse) {}
    rpc PublishBatch (CloudEventBatch) returns (PublishResponse) {}

    rpc Ping(EmptyRequest) returns (PingResponse);
}

// CloudEventBatch is used to send many ChipIngress
message CloudEventBatch{
    repeated io.cloudevents.v1.CloudEvent events = 1;
}

message PublishResponse {
  repeated PublishResult results = 1;
}

message PublishResult {
  string eventId = 1;
}

// EmptyRequest is just an empty request
message EmptyRequest{}

// PingResponse responds to pings
message PingResponse {
	string message = 1;
}
